--- a/src/chrome/app/_locales/en/messages.json
+++ b/src/chrome/app/_locales/en/messages.json
@@ -1,7 +1,11 @@
 {
   "appName": {
-    "message": "uProxy Dev, part 2 of 2",
+    "message": "uProxy, part 2 of 2",
     "description": "The title that appears in the Chrome Extensions listing"
+  },
+  "appNameDev": {
+    "message": "uProxy Dev, part 2 of 2",
+    "description": "The title that appears for the development version of uProxy"
   },
   "appDescription": {
     "message": "(Alpha version) uProxy, part 2 of 2.  You will also need part 1 of 2 to use uProxy.",
